Add descriptive text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Rock Paper Scissor Game</title>
 </head>
 <body>
-    <h1>Open Console to Play</h1>
+    <h1>Welcome to rock-paper-scissors game</h1>
+    <p>Check console for results</p>
     <script src="./js/script.js"></script>
 </body>
 </html>
