Style the modfied html page with css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor Game</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 </head>
 <body>
-    <h1>Welcome to rock-paper-scissors game</h1>
-    <p>Check console for results</p>
-    <script src="./js/script.js"></script>
+    <div class="header">
+        <div class="container">
+            <h1 class="title">Welcome to R-P-S</h1>
+            <h2><em>The Rock Paper Scissors Game</em></h2>
+        </div>
+    </div>
+
+    <div class="gamePlay">
+        <div class="container">
+            <button >Click me to play</button>
+        </div>
+    </div>
+    <br>
+    <footer class="footer">
+        <h2> Abandon Hope All Ye Who Enter Here</h2>
+        </div>
+    </footer>
 </body>
 </html>
