Add 3 button  tags to play.html file

--- a/pages/play.html
+++ b/pages/play.html
@@ -11,19 +11,21 @@
 <body>
     <div class="header">
         <div class="container">
-            <h1 class="title">Welcome to R-P-S</h1>
-            <h2><em>The Rock Paper Scissors Game</em></h2>
+            <h1 class="title">All Hope Abandoned</h1>
         </div>
     </div>
 
     <div class="gamePlay">
         <div class="container">
-            <button >Click me to play</button>
+            <h2>Make a choice</h2>
+            <button class="choice">Rock</button>
+            <button class="choice">Paper</button>
+            <button class="choice">Scissors</button>
         </div>
     </div>
     <br>
     <footer class="footer">
-        <h2> Abandon Hope All Ye Who Enter Here</h2>
+        <h2> Sorcery Administered</h2>
         </div>
     </footer>
 </body>
