--- a/pages/play.html
+++ b/pages/play.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 </head>
-<body>
+<body class="body">
     <div class="header">
         <div class="container">
             <h1 class="title">All Hope Abandoned</h1>
