Style buttons in play.html file

--- a/pages/play.html
+++ b/pages/play.html
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <div class="gamePlay">
+    <div class="play">
         <div class="container">
             <h2>Make a choice</h2>
             <button class="choice">Rock</button>
