Link index.html to play.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="gamePlay">
         <div class="container">
-            <button >Click me to play</button>
+            <button onclick="window.location.href='./pages/play.html';">Click me to play</button>
         </div>
     </div>
     <br>
