Add a return anchor tag to play.html file

--- a/pages/play.html
+++ b/pages/play.html
@@ -9,6 +9,11 @@
     <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 </head>
 <body class="body">
+    <nav class="nav">
+        <div class="container">
+            <a href="/index.html" class="return">Return</a>
+        </div>
+    </nav>
     <div class="header">
         <div class="container">
             <h1 class="title">All Hope Abandoned</h1>
