Get values of 3 buttons from play.html file

--- a/pages/play.html
+++ b/pages/play.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor Game</title>
     <link rel="stylesheet" href="../css/style.css">
+    <!-- <script src="../js/script.js" defer></script> -->
     <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 </head>
 <body class="body">
@@ -21,11 +22,12 @@
     </div>
 
     <div class="play">
-        <div class="container">
+        <p>Testing</p>
+        <div id="buttons" class="container buttons">
             <h2>Make a choice</h2>
-            <button class="choice">Rock</button>
-            <button class="choice">Paper</button>
-            <button class="choice">Scissors</button>
+            <button class="choice" value="Rock">Rock</button>
+            <button class="choice choice1" value="Paper">Paper</button>
+            <button class="choice choice2" value="Scissors">Scissors</button>
         </div>
     </div>
     <br>
@@ -33,5 +35,7 @@
         <h2> Sorcery Administered</h2>
         </div>
     </footer>
+
+    <script src="../js/script.js" defer></script>
 </body>
 </html>
