--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <br>
     <footer class="footer">
-        <h2> Abandon Hope All Ye Who Enter Here</h2>
+        <h2> Abandon Hope All<br>Ye Who Enter Here</h2>
         </div>
     </footer>
 </body>
