--- a/pages/play.html
+++ b/pages/play.html
@@ -14,7 +14,7 @@
     src="../audio/elektronomia-limitless-ncs-bass-boosted.mp3" loop="loop"></audio>
     <nav class="nav">
         <div class="container">
-            <a href="/index.html" class="return">Return</a>
+            <a href=".." class="return">Return</a>
         </div>
     </nav>
     <div class="header">
