Shorten game characters in title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="container">
             <h1 class="title">Welcome to R-P-S</h1>
-            <h2><em>The Rock Paper Scissors Game</em></h2>
+            <h2><em>Rock Paper Scissors</em></h2>
         </div>
     </div>
 
