Add div tag to display client results in browser window

--- a/pages/play.html
+++ b/pages/play.html
@@ -32,6 +32,8 @@
             <button class="choice choice2" value="Scissors">Scissors</button>
             <input type="button" class="choice" value="Play Again" onclick="window.location.href='play.html';">
         </div>
+        <div class="choiceResult"></div>
+        <div class="results"></div>
     </div>
     <br>
     <footer class="footer">
