Hide play again button during game play

--- a/pages/play.html
+++ b/pages/play.html
@@ -30,7 +30,7 @@
             <button class="choice" value="Rock">Rock</button>
             <button class="choice choice1" value="Paper">Paper</button>
             <button class="choice choice2" value="Scissors">Scissors</button>
-            <input type="button" class="choice" value="Play Again" onclick="window.location.href='play.html';">
+            <input type="button" hidden class="click" value="Play Again" onclick="window.location.href='play.html';">
         </div>
         <div class="choiceResult"></div>
         <div class="results"></div>
